# PythonLabs

./: voice_to_text.ipynb
deepagents/maaya/: .env.example  .gitignore  AGENTS.md  Coding_Agent_Standards.docx  README.md  ROADMAP.md  TDD.md  TEST_RESULTS.md  cli.py  dump_hil.py  hil_source.py  package-lock.json  pyproject.toml  test_agent.py  test_attr.py  test_int2.py  test_interrupt.py  test_loop.py  test_meta.py  test_msg.py  test_ws.js  test_ws.py  tmp_msgs.py
deepagents/maaya/agents/: __init__.py  maaya.py  model_config.py  subagents.yaml  tracker_tools.py
deepagents/maaya/changelog/: CHANGELOG_20260324.md  antigravity_change_log0321
deepagents/maaya/frontend/: index.html  package-lock.json  package.json  vite.config.ts
deepagents/maaya/frontend/src/: App.tsx  index.css
deepagents/maaya/frontend/src/lib/: api.ts
deepagents/maaya/project/: .env.example  .gitignore  README.md  docker-compose.yml
deepagents/maaya/project/backend/: .env.example  Dockerfile  pyproject.toml
deepagents/maaya/server/: __init__.py  database.py  main.py  models.py  schemas.py
deepagents/maaya/server/routers/: agent.py  projects.py  tracker.py
deepagents/maaya/skills/coding-standards/: SKILL.md
deepagents/maaya/skills/planner/: SKILL.md
deepagents/maaya/skills/project-planning/: SKILL.md
deepagents/maaya/skills/security-review/: SKILL.md
deepagents/maaya/skills/spec-breakdown/: SKILL.md
deepagents/maaya/skills/tester/: SKILL.md
deepagents/maaya/tests/: ANTIGRAVITY_PROMPT.md  TEST_PLAN.md  test_loop_guards.py  test_phase2.py  test_streaming_and_persistence.py
(+90 files in other folders)
